<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/input_header">

        <SeekBarPreference app:title="@string/dash_length"
            app:key="dash_length"
            app:min="100" android:max="2000"
            app:showSeekBarValue="true"
            app:defaultValue="200"/>

        <SeekBarPreference app:title="@string/short_break_length"
            app:key="short_break_length"
            app:min="100" android:max="2000"
            app:showSeekBarValue="true"
            app:defaultValue="500"/>

        <SeekBarPreference app:title="@string/long_break_length"
            app:key="long_break_length"
            app:min="100" android:max="2000"
            app:showSeekBarValue="true"
            app:defaultValue="2000"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/feedback_header">

        <CheckBoxPreference app:title="@string/vibrate_on_miss"
            app:key="vibrate_on_miss"
            app:defaultValue="true" />

    </PreferenceCategory>

</PreferenceScreen>